# infection-outbreak-puzzle-drills

./: .dockerignore  .gitignore  README.md  README_EN.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/: .gitignore  __init__.py  __main__.py  report_generator.py  rules_parser.py
backend/src/api/: main.py
backend/src/data_loaders/: antimicrobial_loader.py  bed_flow_loader.py  microbiology_loader.py
backend/src/puzzle_engine/: clue_chain.py  scoring_engine.py
backend/src/simulation/: simulator.py
backend/tests/: conftest.py  test_rules_parser.py
frontend/: Dockerfile  index.html  jest.config.ts  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnswerInput.tsx  ClueDetail.tsx  ClueList.tsx  DataCheckpoint.tsx  DataImporter.tsx  ErrorBoundary.tsx  ExportButton.tsx  LanguageSwitcher.tsx  ProgressBar.tsx  ThemeToggle.tsx  Timer.tsx  ToastProvider.tsx
frontend/src/components/__tests__/: ProgressBar.test.tsx  Timer.test.tsx
frontend/src/contexts/: PuzzleContext.tsx  ReplayContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  zh.json
frontend/src/pages/: BoardingPage.tsx  HelpPage.tsx  HistoryPage.tsx  HomePage.tsx  PuzzlePage.tsx  ReplayPage.tsx  ReportPage.tsx  SimulatorPage.tsx
frontend/src/services/: EventRecorder.ts  ExportService.ts  HistoryService.ts  Logger.ts  SecurityService.ts
