[project]
name = "infection-outbreak-puzzle-drills-backend"
version = "1.0.0"
description = "院感暴发桌面线索链推演系统 - 后端引擎"
requires-python = ">=3.10"
dependencies = [
    "simpy>=4.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
]

[project.scripts]
outbreak-drills = "backend.src.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]